; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_btm_ble_stop_scan.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_btm_ble_stop_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"btm_ble_stop_scan \00", align 1
@BTM_BLE_SCAN_MODE_NONE = common dso_local global i32 0, align 4
@btm_cb = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@BTM_BLE_STOP_SCAN = common dso_local global i32 0, align 4
@BTM_BLE_SCAN_DISABLE = common dso_local global i32 0, align 4
@BTM_BLE_DUPLICATE_ENABLE = common dso_local global i32 0, align 4
@SP_ADV_ALL = common dso_local global i32 0, align 4
@BTM_BLE_WL_SCAN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_stop_scan() #0 {
  %1 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %2 = load i32, i32* @BTM_BLE_SCAN_MODE_NONE, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @btm_cb, i32 0, i32 0, i32 1, i32 1), align 4
  %3 = load i32, i32* @BTM_BLE_STOP_SCAN, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @btm_cb, i32 0, i32 0, i32 1, i32 0), align 4
  %4 = load i32, i32* @BTM_BLE_SCAN_DISABLE, align 4
  %5 = load i32, i32* @BTM_BLE_DUPLICATE_ENABLE, align 4
  %6 = call i32 @btsnd_hcic_ble_set_scan_enable(i32 %4, i32 %5)
  %7 = load i32, i32* @SP_ADV_ALL, align 4
  %8 = call i32 @btm_update_scanner_filter_policy(i32 %7)
  %9 = load i32, i32* @BTM_BLE_WL_SCAN, align 4
  %10 = xor i32 %9, -1
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @btm_cb, i32 0, i32 0, i32 0), align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @btm_cb, i32 0, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @BTM_TRACE_EVENT(i8*) #1

declare dso_local i32 @btsnd_hcic_ble_set_scan_enable(i32, i32) #1

declare dso_local i32 @btm_update_scanner_filter_policy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
